[project]
name = "agentic-ai-blog-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.4",
    "langchain-cli[inmem]>=0.0.37",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.1",
    "langchain-groq>=1.1.1",
    "langgraph>=1.0.5",
    "pydantic>=2.12.5",
    "uvicorn>=0.38.0",
    "watchdog>=6.0.0",
]
